--- a/public/webrtc/test-sdi-2-sig-socket.html
+++ b/public/webrtc/test-sdi-2-sig-socket.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>WebRTC 1 to 1 handshake V2</title>  
+  <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 </head>
 <body>
   <button type="button" onclick="startVideo();">Start video</button>
@@ -47,18 +48,21 @@
 
   // --------- websocket ----------
   var socketReady = false;
-  var ws = new WebSocket('wss://westwind.iobb.net/signaling');
-      ws.onopen = function(){
+  var port = 443;
+  var socket = io.connect('https://westwind.iobb.net/signaling');
+  //socket: channel connected
+  socket.on('connect', onOpened);
+  socket.on('message', onMessage);
+
+   function onOpened(evt){
           console.log('socket opened.');
           socketReady = true;
           };
-      ws.onmessage = function(msg){
-        var evt = JSON.parse(msg.data); 
+
+   function onMessage(evt){
         if (evt.type === 'offer') {
-   //       if (!peerStarted){ //connectを押したらofferを受けないシグナリングサーバの輻輳対応で入れた処理、輻輳は解決したのでこのまま
           console.log("Received offer, set offer, sending answer....")
           onOffer(evt);      
-   //            };
             } else if (evt.type === 'answer' && peerStarted) {
           console.log('Received answer, settinng answer SDP');
           onAnswer(evt);
@@ -113,7 +117,7 @@
   
   function onOffer(evt) {
     console.log("Received offer...")
-   // console.log(evt);
+    console.log(evt);
     setOffer(evt);
     sendAnswer(evt);
     peerStarted = true; // 追加
@@ -121,14 +125,14 @@
   
   function onAnswer(evt) {
     console.log("Received Answer...")
-   // console.log(evt);
+    console.log(evt);
     setAnswer(evt);
   }
   
   function onCandidate(evt) {
     var candidate = new RTCIceCandidate({sdpMLineIndex:evt.sdpMLineIndex, sdpMid:evt.sdpMid, candidate:evt.candidate});
     console.log("Received Candidate...")
-   // console.log(candidate);
+    console.log(candidate);
     peerConnection.addIceCandidate(candidate);
 
     var text = JSON.stringify(evt);  //追加
@@ -139,26 +143,20 @@
   function sendSDP(sdp) {
     var text = JSON.stringify(sdp);
     console.log("---sending sdp text ---");
-   // console.log(text);
-    
+    console.log(text);
     textForSendSDP.value = text;
-    textForSendSDP.focus();
-    textForSendSDP.select();
-  
-    //追加
-    ws.send(text);
+
+    socket.json.send(sdp);
   }
   
   function sendCandidate(candidate) {
     var text = JSON.stringify(candidate);
     console.log("---sending candidate text ---");
-  //  console.log(text);
- 
+    console.log(text);
     textForSendICE.value = (textForSendICE.value + CR + iceSeparator + CR + text + CR);
     textForSendICE.scrollTop = textForSendICE.scrollHeight;
 
-    //追加
-    ws.send(text);
+    socket.json.send(candidate);
   }
   
   // ---------------------- video handling -----------------------
@@ -200,7 +198,7 @@
     // send any ice candidates to the other peer
     peer.onicecandidate = function (evt) {
       if (evt.candidate) {
-      //  console.log(evt.candidate);
+        console.log(evt.candidate);
         sendCandidate({type: "candidate", 
                           sdpMLineIndex: evt.candidate.sdpMLineIndex,
                           sdpMid: evt.candidate.sdpMid,
@@ -238,7 +236,7 @@
     peerConnection.createOffer(function (sessionDescription) { // in case of success
       peerConnection.setLocalDescription(sessionDescription);
       console.log("Sending: SDP");
-    //  console.log(sessionDescription);
+      console.log(sessionDescription);
       sendSDP(sessionDescription);
     }, function () { // in case of error
       console.log("Create Offer failed");
@@ -253,7 +251,8 @@
     peerConnection.setRemoteDescription(new RTCSessionDescription(evt));
   }
   
-  function sendAnswer(evt) {
+  // function sendAnswer(evt) {
+  function sendAnswer() {
     console.log('sending Answer. Creating remote session description...' );
     if (! peerConnection) {
       console.error('peerConnection NOT exist!');
@@ -262,8 +261,8 @@
     
     peerConnection.createAnswer(function (sessionDescription) { // in case of success
       peerConnection.setLocalDescription(sessionDescription);
-      console.log("Sending: SDP Answer");
-    //  console.log(sessionDescription);
+      console.log("Sending: SDP");
+      console.log(sessionDescription);
       sendSDP(sessionDescription);
     }, function () { // in case of error
       console.log("Create Answer failed");
@@ -284,6 +283,7 @@
   // -------- handling user UI event -----
   // start the connection upon user request
   function connect() {
+    //if (!peerStarted && localStream && channelReady) {
     if (!peerStarted && localStream && socketReady) {
       sendOffer();
       peerStarted = true;
