--- a/public/webrtc/test-sdi-2-sig.html
+++ b/public/webrtc/test-sdi-2-sig.html
@@ -190,6 +190,8 @@
   //  var pc_config = {"iceServers":[]};
     //STUN対応
     var pc_config = {"iceServers":[{"url":"stun:stun.l.google.com:19302"}]};
+    var pc_config = {"iceServers":[{"url":"stun:westwind.iobb.net:5349"}]};
+    var pc_config = {"iceServers":[{"url":"turn:westwind.iobb.net:5349","username":"debiansv","credential":"debiansvpass"}]};
     var peer = null;
     try {
       peer = new webkitRTCPeerConnection(pc_config);
